Trying to fix <p> on mobile

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -21,7 +21,7 @@
 	}
 
 	p {
-		text-align: justify;
+		text-align: left;
 	}
 
 /* Section/Article */
@@ -50,7 +50,7 @@
 			}
 
 		header p {
-			text-align: center;
+			text-align: left;
 		}
 
 	footer.major {
